--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,34 +10,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/signin"
-        android:text="SIGN IN"
+        android:text="REGISTER"
         android:textColor="@color/white"
         android:textSize="35dp"
         android:layout_margin="50dp"
         android:gravity="center"
         android:textStyle="bold"
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/username"
-            android:layout_below="@id/signin"
-            android:background="#30ffffff"
-            android:hint="Username"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
-            android:layout_margin="10dp"
-            android:padding="20dp"
-            android:drawableLeft="@drawable/baseline_person_24"
-            android:drawablePadding="20dp"
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/name"
+        android:layout_below="@id/signin"
+        android:background="#30ffffff"
+        android:hint="Name"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:layout_margin="10dp"
+        android:padding="20dp"
+        android:drawableLeft="@drawable/baseline_person_24"
+        android:drawablePadding="20dp"
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/password"
+        android:id="@+id/email"
         android:layout_below="@id/username"
         android:background="#30ffffff"
-        android:hint="Password"
+        android:hint="E-mail"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:layout_margin="10dp"
@@ -47,15 +47,15 @@
         android:inputType="textPassword"
 
 
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/login"
-            android:layout_below="@id/password"
-            android:text="LOGIN"
-            android:backgroundTint="@color/black"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="20dp"
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/login"
+        android:layout_below="@id/password"
+        android:text="LOGIN"
+        android:backgroundTint="@color/black"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"
 
     <TextView
         android:id="@+id/forgetpassword"
