--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@drawable/AppBackground">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +17,7 @@
         android:layout_margin="50dp"
         android:gravity="center"
         android:textStyle="bold"
+        />
 
     <EditText
         android:layout_width="match_parent"
@@ -30,6 +32,7 @@
         android:padding="20dp"
         android:drawableLeft="@drawable/baseline_person_24"
         android:drawablePadding="20dp"
+        />
 
     <EditText
         android:layout_width="match_parent"
@@ -45,6 +48,7 @@
         android:drawableLeft="@drawable/baseline_password_24"
         android:drawablePadding="20dp"
         android:inputType="textPassword"
+        />
 
 
     <com.google.android.material.button.MaterialButton
@@ -56,6 +60,7 @@
         android:backgroundTint="@color/black"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
+        />
 
     <TextView
         android:id="@+id/forgetpassword"
@@ -73,48 +78,51 @@
 
 
     <TextView
+        android:layout_below="@id/forgetpassword"
+        android:layout_centerHorizontal="true"
         android:id="@+id/others"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/twitter"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="434dp"
         android:gravity="center"
         android:text="Or Sign-In With"
         android:textColor="@color/white" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/socialicons"
-
-
-    <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/googlelogo" />
-
-    <ImageView
-        android:id="@+id/twitter"
-        android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_alignEnd="@id/forgetpassword"
+        android:id="@+id/socialicons"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="8dp"
-        android:src="@drawable/twitterlogo" />
+        >
 
-    <ImageView
-        android:id="@+id/twitter"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignEnd="@id/forgetpassword"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="-123dp"
-        android:layout_marginBottom="17dp"
-        android:src="@drawable/facebooklogo" />
+
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/googlelogo"
+            android:layout_centerVertical="true"
+            />
+
+
+        <ImageView
+            android:id="@+id/twitter"
+            android:layout_width="95dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="28dp"
+            android:layout_marginBottom="0dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/twitterlogo" />
+
+        <ImageView
+            android:id="@+id/facebook"
+            android:layout_alignParentEnd="true"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/facebooklogo"
+            android:layout_centerVertical="true"/>
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
