--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,117 +6,15 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@drawable/AppBackground">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/signin"
-        android:text="SIGN IN"
-        android:textColor="@color/white"
-        android:textSize="35dp"
-        android:layout_margin="50dp"
-        android:gravity="center"
-        android:textStyle="bold"
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/username"
-            android:layout_below="@id/signin"
-            android:background="#30ffffff"
-            android:hint="Username"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
-            android:layout_margin="10dp"
-            android:padding="20dp"
-            android:drawableLeft="@drawable/baseline_person_24"
-            android:drawablePadding="20dp"
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/password"
-        android:layout_below="@id/username"
-        android:background="#30ffffff"
-        android:hint="Password"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:layout_margin="10dp"
-        android:padding="20dp"
-        android:drawableLeft="@drawable/baseline_password_24"
-        android:drawablePadding="20dp"
-        android:inputType="textPassword"
-
-
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/login"
-            android:layout_below="@id/password"
-            android:text="LOGIN"
-            android:backgroundTint="@color/black"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="20dp"
-
-    <TextView
-        android:id="@+id/forgetpassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/login"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="20dp"
-        android:text="Forget Password"
-        android:textColor="@color/white"
-        android:textStyle="bold"/>
-
-
-    <TextView
-        android:id="@+id/others"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/twitter"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="21dp"
-        android:gravity="center"
-        android:text="Or Sign-In With"
-        android:textColor="@color/white" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/socialicons"
 
-
-    <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/googlelogo" />
-
-    <ImageView
-        android:id="@+id/twitter"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignEnd="@id/forgetpassword"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="8dp"
-        android:src="@drawable/twitterlogo" />
-
-    <ImageView
-        android:id="@+id/twitter"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignEnd="@id/forgetpassword"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="-123dp"
-        android:layout_marginBottom="17dp"
-        android:src="@drawable/facebooklogo" />
-
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/Avatar"
 </RelativeLayout>
 
 
